traces ui